# pip-qt

./: README.md  pyproject.toml  requirements.txt
pip_qt/: __init__.py
